--- a/build_tools/windows/Engine.vcxproj
+++ b/build_tools/windows/Engine.vcxproj
@@ -236,6 +236,7 @@
     <ClCompile Include="..\..\src\core\VarGroup.cpp" />
     <ClCompile Include="..\..\src\core\VarJsonReader.cpp" />
     <ClCompile Include="..\..\src\gui\custom_elements\GUIColorPicker.cpp" />
+    <ClCompile Include="..\..\src\gui\custom_elements\ToggleGroup.cpp" />
     <ClCompile Include="..\..\src\gui\font_rendering\Font.cpp" />
     <ClCompile Include="..\..\src\gui\font_rendering\FontFamily.cpp" />
     <ClCompile Include="..\..\src\gui\font_rendering\FontRenderer.cpp" />
