--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -56,6 +56,7 @@ add_library(engine STATIC
 ./opengl/Shader.cpp
 ./opengl/MVar.cpp
 ./opengl/Material.cpp
+./opengl/Camera.cpp
 ./utility/SimplexNoise.cpp
 ./utility/Util.cpp
 ./utility/Helpers.cpp
@@ -66,7 +67,6 @@ add_library(engine STATIC
 ./core/VarJsonReader.cpp
 ./core/FileSystem.cpp
 ./core/File.cpp
-./scenegraph/Camera.cpp
 ./gui/font_rendering/FontFamily.cpp
 ./gui/font_rendering/Font.cpp
 ./gui/font_rendering/FontRenderer.cpp
