--- a/build_tools/windows/Engine.vcxproj.filters
+++ b/build_tools/windows/Engine.vcxproj.filters
@@ -132,9 +132,6 @@
     <ClInclude Include="..\..\src\resources\TGAloader.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\src\scenegraph\Camera.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="..\..\src\utility\Bit.h">
       <Filter>Header Files</Filter>
     </ClInclude>
@@ -261,10 +258,22 @@
     <ClInclude Include="..\..\src\core\PathTools.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\src\resources\ResourceManager.h">
+    <ClInclude Include="..\..\src\opengl\Camera.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="..\..\src\opengl\OpenGLExtensionLoader.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\src\opengl\OpenGLInc.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\src\opengl\Plane3d.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\src\resources\ResourceManager.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\src\resources\ResourcesInc.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
@@ -350,9 +359,6 @@
     <ClCompile Include="..\..\src\resources\TGAloader.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\src\scenegraph\Camera.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
     <ClCompile Include="..\..\src\utility\Helpers.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
@@ -434,13 +440,16 @@
     <ClCompile Include="..\..\src\application\AppContext.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\src\resources\ResourceManager.cpp">
+    <ClCompile Include="..\..\src\opengl\Camera.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="..\..\src\opengl\OpenGLExtensionLoader.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="..\..\src\opengl\Shader.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\src\resources\ResourceManager.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
